# mandelbrot_kokkos

./: .gitignore  .gitmodules  Makefile  README.md  mandelbrot.h
basic/: kokkos_shared.h  main.cpp
basic_mdrange/: kokkos_shared.h  main.cpp
pipelined0/: kokkos_shared.h  main.cpp
pipelined1/: CMakeLists.txt  kokkos_shared.h  main.cpp
